--- a/cssfile.css
+++ b/cssfile.css
@@ -145,7 +145,7 @@ span{
  /* hero-section */
  .hero-section{
     background-image: url("scroll.webp");
-    background-size: cover;
+    background-size: contain;
     height: 350px;
     display: flex;
     align-items: flex-end;
